codegen hide changes

--- a/rust/fatcat-api-spec/api.yaml
+++ b/rust/fatcat-api-spec/api.yaml
@@ -502,6 +502,11 @@ paths:
           type: string
           required: false
           description: "List of sub-entities to expand in response. For containers, none accepted (yet)."
+        - name: hide
+          in: query
+          type: string
+          required: false
+          description: "List of entity fields to elide in response. For containers, none accepted (yet)."
       responses:
         200:
           description: Found Entity
@@ -576,6 +581,11 @@ paths:
           in: query
           required: true
           <<: *FATCATISSN
+        - name: hide
+          in: query
+          type: string
+          required: false
+          description: "List of entity fields to elide in response. For container, none accepted (yet)."
       responses:
         200:
           description: Found Entity
@@ -650,6 +660,11 @@ paths:
           type: string
           required: false
           description: "List of sub-entities to expand in response. For creators, none accepted (yet)."
+        - name: hide
+          in: query
+          type: string
+          required: false
+          description: "List of entity fields to elide in response. For containers, none accepted (yet)."
       responses:
         200:
           description: Found Entity
@@ -720,6 +735,11 @@ paths:
         in: path
         type: string
         required: true
+      - name: hide
+        in: query
+        type: string
+        required: false
+        description: "List of entity fields to elide in response. For releases, 'abstracts', 'refs', and 'contribs' are valid."
     get:
       operationId: "get_creator_releases"
       tags: # TAGLINE
@@ -742,6 +762,11 @@ paths:
           in: query
           required: true
           <<: *FATCATORCID
+        - name: hide
+          in: query
+          type: string
+          required: false
+          description: "List of entity fields to elide in response. For creator, none accepted (yet)."
       responses:
         200:
           description: Found Entity
@@ -816,6 +841,11 @@ paths:
           type: string
           required: false
           description: "List of sub-entities to expand in response. For files, none accepted (yet)."
+        - name: hide
+          in: query
+          type: string
+          required: false
+          description: "List of entity fields to elide in response. For files, none accepted (yet)."
       responses:
         200:
           description: Found Entity
@@ -890,6 +920,11 @@ paths:
           in: query
           type: string
           required: true
+        - name: hide
+          in: query
+          type: string
+          required: false
+          description: "List of entity fields to elide in response. For files, none accepted (yet)."
       responses:
         200:
           description: Found Entity
@@ -964,6 +999,11 @@ paths:
           type: string
           required: false
           description: "List of sub-entities to expand in response. For releases, 'files' and 'container' are valid."
+        - name: hide
+          in: query
+          type: string
+          required: false
+          description: "List of entity fields to elide in response. For releases, 'abstracts', 'refs', and 'contribs' are valid."
       responses:
         200:
           description: Found Entity
@@ -1034,6 +1074,11 @@ paths:
         in: path
         type: string
         required: true
+      - name: hide
+        in: query
+        type: string
+        required: false
+        description: "List of entity fields to elide in response. For files, none accepted (yet)."
     get:
       operationId: "get_release_files"
       tags: # TAGLINE
@@ -1056,6 +1101,11 @@ paths:
           in: query
           type: string
           required: true
+        - name: hide
+          in: query
+          type: string
+          required: false
+          description: "List of entity fields to elide in response. For releases, 'abstracts', 'refs', and 'contribs' are valid."
       responses:
         200:
           description: Found Entity
@@ -1130,6 +1180,11 @@ paths:
           type: string
           required: false
           description: "List of sub-entities to expand in response. For works, none accepted (yet)."
+        - name: hide
+          in: query
+          type: string
+          required: false
+          description: "List of entity fields to elide in response. For works, none accepted (yet)."
       responses:
         200:
           description: Found Entity
@@ -1200,6 +1255,11 @@ paths:
         in: path
         type: string
         required: true
+      - name: hide
+        in: query
+        type: string
+        required: false
+        description: "List of entity fields to elide in response. For releases, 'abstracts', 'refs', and 'contribs' are valid."
     get:
       operationId: "get_work_releases"
       tags: # TAGLINE
