--- a/rust/fatcat-api-spec/api.yaml
+++ b/rust/fatcat-api-spec/api.yaml
@@ -201,6 +201,10 @@ definitions:
       release_date:
         type: string
         format: date
+      release_year:
+        type: integer
+        example: 2014
+        format: int64
       doi:
         type: string
         #format: custom
@@ -1267,7 +1271,7 @@ paths:
           in: query
           type: string
           required: false
-          description: "List of sub-entities to expand in response. For releases, 'files' and 'container' are valid."
+          description: "List of sub-entities to expand in response. For releases, 'files', 'container', and 'creators' are valid."
         - name: hide
           in: query
           type: string
