--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -21,7 +21,7 @@ data-encoding = "2.1"
 regex = "1"
 lazy_static = "1.0"
 sha1 = { version = "0.6", features = ["std"] }
-macaroon = { git = "https://github.com/bnewbold/libmacaroon-rs", branch = "bnewbold-stable-rust" }
+macaroon = { git = "https://github.com/bnewbold/libmacaroon-rs", branch = "bnewbold-broken" }
 
 # API server
 chrono = { version = "0.4", features = ["serde"] }
